[gd_scene load_steps=7 format=3 uid="uid://4t3ckdvi728j"]

[ext_resource type="Script" uid="uid://ddmlacvfkc5sk" path="res://scene/UI/level_hud/level_hud.gd" id="1_4q383"]
[ext_resource type="Script" uid="uid://twlk1emcihqe" path="res://scene/UI/level_hud/elements/color_polygon.gd" id="1_htaoi"]
[ext_resource type="Script" uid="uid://drkmaaq4hog1h" path="res://scene/UI/level_hud/elements/progress_bar_polygon.gd" id="2_4p0si"]
[ext_resource type="PackedScene" uid="uid://xg4bnnehfsvo" path="res://scene/UI/level_hud/elements/bar/resonanceBar/resonance_bar.tscn" id="3_pamlj"]
[ext_resource type="PackedScene" uid="uid://cu1qcqekr6kso" path="res://scene/UI/level_hud/elements/bar/healthBar/health_bar.tscn" id="3_xa13n"]
[ext_resource type="PackedScene" uid="uid://ctiqrkp51uyft" path="res://scene/UI/level_hud/elements/bar/cooldownBar/cooldown_bar.tscn" id="4_d8w8s"]

[node name="LevelHUD" type="CanvasLayer"]
script = ExtResource("1_4q383")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomHudHBOX" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
alignment = 1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/BottomHudHBOX"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BottomHudHBOX"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/BottomHudHBOX/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProgressBarPolygon2" type="Control" parent="MarginContainer/VBoxContainer/BottomHudHBOX/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("2_4p0si")
outline_width = 0.0
points = Array[Vector2]([Vector2(0.03, 1), Vector2(0, 0), Vector2(1, 0), Vector2(0.97, 1), Vector2(1, 1)])
metadata/_custom_type_script = "uid://drkmaaq4hog1h"

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/BottomHudHBOX/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BottomHudHBOX"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_constants/separation = 0

[node name="ColorTriangle" type="Control" parent="MarginContainer/VBoxContainer/BottomHudHBOX/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_htaoi")
outline_color = Color(0, 0, 0, 1)
outline_width = 1.0
points = Array[Vector2]([Vector2(0, 1), Vector2(1, 0), Vector2(1, 1)])
metadata/_custom_type_script = "uid://twlk1emcihqe"

[node name="ColorTriangle3" type="Control" parent="MarginContainer/VBoxContainer/BottomHudHBOX/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_htaoi")
outline_color = Color(0, 0, 0, 1)
outline_width = 1.0
points = Array[Vector2]([Vector2(0, 1), Vector2(1, 0), Vector2(1, 1)])
flip_x = true
metadata/_custom_type_script = "uid://twlk1emcihqe"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BottomHudHBOX"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/BottomHudHBOX/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProgressBarPolygon" type="Control" parent="MarginContainer/VBoxContainer/BottomHudHBOX/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("2_4p0si")
outline_width = 1.0
points = Array[Vector2]([Vector2(0.03, 1), Vector2(0, 0), Vector2(1, 0), Vector2(0.97, 1), Vector2(1, 1)])
metadata/_custom_type_script = "uid://drkmaaq4hog1h"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/BottomHudHBOX/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/BottomHudHBOX"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthBar" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_xa13n")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
max_value = 200.0
value = 200.0

[node name="CooldownBar" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_d8w8s")]
layout_mode = 2
size_flags_stretch_ratio = 0.2

[node name="ResonanceBar" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_pamlj")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
expand_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
